# fpconv

./: CMakeLists.txt  LICENSE  README.md
src/: dummy.cpp
src/app/: CMakeLists.txt  app_mainwindow.cpp  app_mainwindow.h  app_mainwindow.ui  main.cpp
src/lib/: CMakeLists.txt  fpconv.cpp
src/lib/include/lib/: fpconv.h
